# CyberToolAnalysis

./: .gitignore  LICENSE  README.md  flake.nix
.github/workflows/: amplify-bulid.yml  amplify_pull.sh  check.yml  lambda-check.yml  lambda-test.yml
code/: README.md
code/lambda/: Cargo.toml  shell.nix  update_report_lambdas.sh
code/lambda/ReportCyberTool/: Cargo.toml
code/lambda/ReportCyberTool/src/: main.rs
code/lambda/beginreportcybertool/: Cargo.toml
code/lambda/beginreportcybertool/src/: main.rs  model.json  testcases.json
code/lambda/bgnreportstepfunction/: Cargo.toml
code/lambda/bgnreportstepfunction/src/: main.rs
code/lambda/fetchDashboard/: lambda_function.py
code/lambda/getAllTools/: Cargo.toml
code/lambda/getAllTools/src/: main.rs
code/lambda/getSingularToolDataP/: lambda_handler.py
code/lambda/getreportlist/: Cargo.toml
code/lambda/getreportlist/src/: main.rs
code/lambda/getsingulartooldata/: Cargo.toml
code/lambda/getsingulartooldata/src/: main.rs
code/lambda/reportcreatepresignedurl/: Cargo.toml
code/lambda/reportcreatepresignedurl/src/: main.rs  testcases.json
code/lambda/reportcybertool/: Cargo.toml
code/lambda/reportcybertool/src/: main.rs
code/websitesrc/: README.md
code/websitesrc/amplify/: team-provider-info.json
code/websitesrc/amplify/.config/: project-config.json
code/websitesrc/cybertoolwebsite/: .gitignore  README.md  flake.nix  node-packages.nix  package-lock.json  package.json  shell.nix
code/websitesrc/cybertoolwebsite/amplify/: team-provider-info.json
code/websitesrc/cybertoolwebsite/amplify/.config/: project-config.json
code/websitesrc/cybertoolwebsite/amplify/backend/: backend-config.json
code/websitesrc/cybertoolwebsite/amplify/backend/api/: APIGatewayAuthStack.json
code/websitesrc/cybertoolwebsite/amplify/backend/api/apiab9b8614/: cli-inputs.json
code/websitesrc/cybertoolwebsite/amplify/backend/api/apicc323caa/: cli-inputs.json
code/websitesrc/cybertoolwebsite/amplify/backend/auth/cybertoolwebsite1c5eb582/: cli-inputs.json
code/websitesrc/cybertoolwebsite/amplify/backend/auth/cybertoolwebsite82b62747/: cli-inputs.json
code/websitesrc/cybertoolwebsite/amplify/backend/auth/cybertoolwebsite90a2f0f3/: cli-inputs.json
code/websitesrc/cybertoolwebsite/amplify/backend/auth/userPoolGroups/: user-pool-group-precedence.json
code/websitesrc/cybertoolwebsite/amplify/backend/function/cybertoolwebsite430c7922/: cybertoolwebsite430c7922-cloudformation-template.json
code/websitesrc/cybertoolwebsite/amplify/backend/function/cybertoolwebsite430c7922/src/: package-lock.json  package.json
code/websitesrc/cybertoolwebsite/amplify/backend/function/cybertoolwebsitef06de9f8/: cybertoolwebsitef06de9f8-cloudformation-template.json
code/websitesrc/cybertoolwebsite/amplify/backend/storage/CyberTools/: parameters.json
code/websitesrc/cybertoolwebsite/amplify/backend/storage/ReportLocationTable/: parameters.json
code/websitesrc/cybertoolwebsite/amplify/backend/storage/cybertoolwebsite67c1ea5d/: parameters.json
code/websitesrc/cybertoolwebsite/amplify/backend/types/: amplify-dependent-resources-ref.d.ts
code/websitesrc/cybertoolwebsite/public/: index.html
code/websitesrc/cybertoolwebsite/react-redirect/: package-lock.json
code/websitesrc/cybertoolwebsite/src/: App.css  App.js  App.test.js  Dashboard.css  Dashboard.js  ForgotPassword.js  Login.js  LoginPage.css  Questionnaire.css  Questionnaire.js  ReportList.css  ReportList.js  Signup.css  Signup.js  fetchJwt.js  index.js  questions.js  questions.json
code/websitesrc/cybertoolwebsite/src/ui-components/: Button.d.ts  Button.jsx  Group2.d.ts  Group2.jsx  Logo.d.ts  Logo.jsx  Polygon1.d.ts  Polygon1.jsx  Rectangle1.d.ts  Rectangle12.d.ts  Rectangle12.jsx  Rectangle1Variant2.jsx  SigninPage.d.ts  SigninPage.jsx  SignupPage.d.ts  SignupPage.jsx  Star1.d.ts  Star1.jsx  index.js
code/websitesrc/src/ui-components/: Rectangle1.jsx  Rectangle1Variant2.d.ts  Welcome.d.ts  Welcome.jsx  index.js
docs/: 3MinuteVideo.md  FinalDemo.md  FinalTestPlan.md  JeremiahWebbEngineeringNotebook.md  Meholic_EngineeringNotebook.md  OliviaMeholicEngineeringNotebook.md  ProductVision.md  SDD.md  SDDFinal.md  SRS-Final.md  SRS-V2.md  SRS.md  meeting9242023.md  testplan.md
docs/FALL-DOCS/: ArchitectureDiagram.md  FinalTestPlan.md  PresentationOne.md  PresentationTwo.md  Questionnaire.md  README.md  SDD-V2.md  SDDFinal.md  meeting9242023.md  testplan.md
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/react-redirect/: package.json
frontend/src/: Account.css  Account.js  App.css  App.js  Dashboard.css  Dashboard.js  ForgotPassword.js  Login.css  Login.js  Questionnaire.css  Questionnaire.js  ReportList.css  ReportList.js  ShowToolData.css  ShowToolData.js  Signup.css  UploadTool.js  UploadToolAPI.js  UploadToolForm.js  dashboardConstants.js  dashboardFunctionsAPI.js  dashboardTableComponent.js  helperFunctionsForUserAPI.js  index.css  index.js  navbar.css  navbar.js  questionnaireHelperAPI.js  questions.js  reportAPI.js  reportTable.js  uploadToolTableComponent.js  uploadtool.css
frontend/src/ui-components/: Button.d.ts  Button.jsx  index.js
lambda/: Cargo.toml  update_report_lambdas.sh  update_with_zigbuild.txt
lambda/InputToolsIntoDynamoDB/: input.py  tool_data.csv
lambda/beginreportcybertool/: Cargo.toml  deploy.sh
lambda/beginreportcybertool/src/: db_wrapper.rs  embedding.rs  main.rs  pdf.rs  rank_tools.rs  testcases.json  types.rs
lambda/fetchDashboard/: lambda_function.py
lambda/getSingularToolDataP/: lambda_handler.py
lambda/getreportlist/: Cargo.toml
lambda/getreportlist/src/: main.rs  testcases.json
lambda/getsingulartooldata/: Cargo.toml
lambda/getsingulartooldata/src/: lib.rs  main.rs
lambda/handleToolApprovalDenyP/: lambda_function.py
lambda/recommendTools/: Cargo.toml
lambda/recommendTools/src/: main.rs
lambda/reportcreatepresignedurl/: Cargo.toml
lambda/reportcreatepresignedurl/src/: main.rs
lambda/submitPotentialToolP/: lambda_function.py
