[package]
name = "beginreportcybertool"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anyhow = "1.0.80"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.16.0"
aws-sdk-sfn = "1.15"
futures-util = "0.3.30"
lambda_http = "0.10"
lambda_runtime = "0.10"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[package.metadata.lambda.deploy]
memory = 512                   # Function's memory
timeout = 60                   # Function's execution timeout
tracing = "active"             # Tracing mode
role = "arn:aws:iam::417838760454:role/RustTestAdminRole"         # Function's execution role
#env_file = ".env.production"   # File to load environment variables from
#env = { "VAR1" = "VAL1" }      # Additional environment variables
#layers = [                     # List of layers to deploy with your function
    #"layer-full-arn"
#]
#tags = { "team" = "lambda" }   # List of AWS resource tags for this function
