[package]
name = "beginreportcybertool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.16.0"
aws-sdk-sfn = "1.15"
candle-core = "0.4.1"
candle-nn = "0.4.1"
candle-transformers = "0.4.1"
futures-util = "0.3.30"
hf-hub = "0.3.2"
lambda_http = "0.10"
lambda_runtime = "0.10"
rbert = "0.2.1"
serde = "1.0"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0"
tokenizers = "0.15.2"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[package.metadata.lambda.deploy]
memory = 512
timeout = 60
tracing = "active"
role = "arn:aws:iam::417838760454:role/RustTestAdminRole"
#env_file = ".env.production"   # File to load environment variables from
#env = { "VAR1" = "VAL1" }      # Additional environment variables
#layers = [                     # List of layers to deploy with your function
    #"layer-full-arn"
#]
#tags = { "team" = "lambda" }   # List of AWS resource tags for this function
