[package]
name = "getsingulartooldata"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1"
aws-sdk-dynamodb = "1"
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
serde = "1.0.192"
serde_json = "1.0.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
[package.metadata.lambda.deploy]
memory = 512                   # Function's memory
timeout = 60                   # Function's execution timeout
tracing = "active"             # Tracing mode
role = "arn:aws:iam::417838760454:role/RustTestAdminRole"
