[package]
name = "recommend_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
#aws-config = "0.57.1"
#aws-sdk-dynamodb = "0.35.0"
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
serde = "1.0.192"
aws-config = "1"
aws-sdk-dynamodb = "1"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.108"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
[package.metadata.lambda.deploy]
memory = 512                   # Function's memory
timeout = 60                   # Function's execution timeout
tracing = "active"             # Tracing mode
role = "arn:aws:iam::417838760454:role/RustTestAdminRole"
