[package]
name = "ReportCyberTool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.56.1"
aws-sdk-dynamodb = "0.33.0"
tokio = {version = "1.33.0", features = ["full"]}
lambda_runtime = "0.8.2"
serde = "1.0.188"
serde_json = "1.0.107"
serde_derive = "1.0.188"
log = "0.4.20"
simple_logger = "4.2.0"
[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
