[package]
name = "reportcybertool"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "0.56.1"
aws-sdk-dynamodb = "0.33.0"
aws-sdk-s3 = "0.33.0"
futures = "0.3.28"
genpdf = "0.2.0"

lambda_runtime = "0.8.1"
serde = "1.0.136"
tokio = { version = "1", features = ["macros"] }
tokio-stream = "0.1.14"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
